@@ -79,7 +79,7 @@ TSTHDRS = rrutil.h rrtimer.h
 bin_PROGRAMS = cjpeg djpeg jpegtran rdjpgcom wrjpgcom
 noinst_PROGRAMS = jpgtest jpegut
 
-jpgtest_SOURCES = $(TSTHDRS) jpgtest.cxx bmp.h bmp.c
+jpgtest_SOURCES = $(TSTHDRS) jpgtest.c bmp.h bmp.c
 
 jpgtest_LDADD = libturbojpeg.la
 
